fix: resolve logout redirect issue

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,6 +8,7 @@
   </div>
   } @else {
   <div>
+    <h1>Hello!</h1>
     <button (click)="loginWithRedirect()">Login with redirect</button>
   </div>
   }
