feat: add settings button with admin portal integration

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,6 +5,7 @@
     <img src={{user?.profilePictureUrl}} alt={{user?.name}} />
     <div>User name: {{user?.name}}</div>
     <button (click)="logOut()">Log out</button>
+    <button (click)="showAdminPortal()">Settings</button>
   </div>
   } @else {
   <div>
