--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,25 +1,27 @@
 @if(!isLoading){ 
     @if(user){
-        <div>
-        <img src="{{user?.profilePictureUrl}}" alt="{{user?.name}}" />
-        <div>User name: {{user?.name}}</div>
-        <button (click)="logOut()">Log out</button>
-        <button (click)="showAdminPortal()">Settings</button>
+        <div class="user-details">
+            <img [src]="user?.profilePictureUrl" [alt]="user?.name" />
+            <div>
+                <p class="username">{{user?.name}}</p>
+                <div class="dropdown-container">
+                    <select class="dropdown" (change)="onTenantChange($event)">
+                        @for (tenant of tenantsState().tenants; track tenant.tenantId) {
+                            <option
+                                [value]="tenant.tenantId" 
+                                [selected]="tenant.tenantId === tenantsState().activeTenant.tenantId">
+                                {{tenant.name}}
+                            </option>
+                        }
+                    </select>
+                </div>
+            </div>
         </div>
+            <button class="bg-danger" (click)="logOut()">Log out</button>
+            <button class="bg-secondary" (click)="showAdminPortal()">Settings</button>
 
-        <select (change)="onTenantChange($event)">
-            @for (tenant of tenantsState().tenants; track tenant.tenantId) {
-                <option
-                    [value]="tenant.tenantId" 
-                    [selected]="tenant.tenantId === tenantsState().activeTenant.tenantId">
-                    {{tenant.name}}
-                </option>
-            }
-        </select>
     }@else{
-        <div>
         <h1>Hello!</h1>
-        <button (click)="loginWithRedirect()">Login with redirect</button>
-        </div>
+        <button class="bg-primary" (click)="loginWithRedirect()">Login</button>
     } 
 }
